/*
 * Copyright (C) 2002-2013 FlyMine
 *
 * This code may be freely distributed and modified under the
 * terms of the GNU Lesser General Public Licence.  This should
 * be distributed with the code.  See the LICENSE file for more
 * information or http://www.gnu.org/copyleft/lesser.html.
 *
 */

1.2.3

#??? - Dropped support for MyID which is no longer active.
#511 - Doubleclicking an option on QueryBuilder type selector now works in IE.
#483 - window.jQuery != $
#479 - Moved new build of list widgets to InterMine.
#451 - Template more results & browser autocomplete fix (+ #66).
#355 - Being able to hide fields from QueryBuilder.
#400 - Better UI for list upload resolve identifiers step (+ #489, #494, #497, #505)

1.2.2 (7 August 2013)

#283 - Don't load MeSH terms by default when using PubMed data converter
#372 - Add UberonTerm
#373 - Fix query cancellation when using wild card with LOOKUP
#390 - A tiny gap in the header of FlyMine report pages
#405 - Fix browser detection not working with jQuery >= 1.9.1
#409 - Remove waiting page when running queries
#416 - Fixed screen black out when selecting 250 rows in query results

1.2.1 (fixes for C. elegans meeting)

#359 - Allow Inline Refs & Colls on Report pages to be displayed using Results Tables JS library
#113 - NULL URLs not handled
#138 - Scroll to top after list creation on List Analysis page
#192 - Links to external sites should always open in a new window enhancement please-test
#213 - Do not get actual count of matches on identifier resolution page
#279 - Updated jQuery UI to be compatible with newer jQuery
#289 - Results table column summary fails to display when toggling between them 
#292 - missing icon font stylesheet for Results Tables on Report pages
#293 - network viewer toggle not working (flymine) 
#294 - expression graph is blue in flymine
#299 - remove publication displayer
#306 - ref #279
#307 - ref #279
#309 - Enable working FASTA exporter
#312 - Upgraded Backbone.js